<resources>
    <string name="app_name">MiniGolf</string>
    <string name="settings">Nastavenia</string>
    <string name="hit_count">Počet úderov</string>
    <string name="hole_count">Počet jamiek</string>
    <string name="save_location">Uložiť polohu</string>
    <string name="players">Hráči</string>
    <string name="default_number">0</string>
    <string name="new_game">Nová hra</string>
    <string name="history">História</string>
    <string name="next_image_button">Navigácia ďalej</string>
    <string name="player">Hráč %d</string>
    <string name="name">Meno</string>
    <string name="add_photo">Pridať fotku</string>
    <string name="table">Tabuľka</string>
    <string name="statistics">Štatistiky</string>
    <string name="no_adress">Žiadna adresa</string>
    <string name="summary">Zhrnutie</string>
    <string name="average_hit_at_hole">Priemerné skóre</string>
    <string name="game_detail">Detail hry</string>
    <string name="end_game_question">Ukončiť hru?</string>
    <string name="yes">Áno</string>
    <string name="no">Nie</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_game_summary">GameSummaryActivity</string>
    <string name="title_activity_game_history_detail">GameHistoryDetailActivity</string>
</resources>
