<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".course.gamesummary.GameSummaryActivity"
    tools:showIn="@layout/gamesummary_activity"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false">


    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/photoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/add_photo"
            android:layout_margin="16dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:clickable="true"
            android:onClick="onAddPhotoButtonClick"
            app:backgroundTint="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_white_24dp"
            android:layout_margin="16dp"/>
    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/gamesummaryTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        app:tabIndicatorColor="@color/colorPrimary"
        app:tabTextColor="@color/colorPrimary">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/table" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics" />

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/gamesummaryPager"
        android:layout_width="match_parent"
        android:layout_height="fill_parent" />

</LinearLayout>