<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingTop="@dimen/margin">

    <RelativeLayout
        android:id="@+id/headerWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/margin"
        android:paddingRight="@dimen/margin">

        <ImageView
            android:id="@+id/settingsImageViewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_settings_primarycolor_16dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/settingsTextView"
            style="@style/textViewSubhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/color_primary"
            android:layout_toEndOf="@+id/settingsImageViewIcon"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/hitCountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:layout_below="@+id/settingsTextView"
            android:text="@string/hit_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text" />

       <!-- <android.support.v7.widget.AppCompatSeekBar
            android:id="@+id/hitCountSeekBar"
            android:layout_below="@id/hitCountTextView"
            android:min="1"
            android:max="10"
            android:progress="7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-16dp"/> -->

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/hitCountSeekBar"
            android:layout_below="@id/hitCountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_clear_default_padding="true"
            android:paddingRight="@dimen/margin_half"
            app:isb_max="10"
            app:isb_min="1"
            app:isb_progress="7"
            app:isb_ticks_count="10"
            app:isb_thumb_color="@color/color_primary"
            app:isb_thumb_size="12dp"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_indicator_color="@color/color_primary"
            app:isb_indicator_text_color="@color/white"
            app:isb_indicator_text_size="12sp"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/color_primary"
            app:isb_track_progress_size="2dp" />

        <TextView
            android:id="@+id/holeCountTextView"
            android:layout_below="@+id/hitCountSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_half"
            android:text="@string/hole_count"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text" />

        <com.warkiz.widget.IndicatorSeekBar
            android:id="@+id/holeCountSeekBar"
            android:layout_below="@id/holeCountTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:isb_clear_default_padding="true"
            android:paddingRight="@dimen/margin_half"
            app:isb_max="20"
            app:isb_min="1"
            app:isb_progress="10"
            app:isb_ticks_count="10"
            app:isb_thumb_color="@color/color_primary"
            app:isb_thumb_size="12dp"
            app:isb_show_indicator="rounded_rectangle"
            app:isb_indicator_color="@color/color_primary"
            app:isb_indicator_text_color="@color/white"
            app:isb_indicator_text_size="12sp"
            app:isb_track_background_size="2dp"
            app:isb_track_progress_color="@color/color_primary"
            app:isb_track_progress_size="2dp" />

        <Switch
            android:id="@+id/saveLocationSwitch"
            style="@style/switchStyle"
            android:layout_width="match_parent"
            android:layout_below="@id/holeCountSeekBar"
            android:text="@string/save_location"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/secondary_text" />

    </RelativeLayout>

    <View
        android:id="@+id/horizontalSeparator"
        style="@style/HorizontalSeparator"
        android:layout_marginTop="@dimen/margin"
        android:layout_marginBottom="@dimen/margin"
        android:layout_below="@+id/headerWrapper"/>

    <ImageView
        android:id="@+id/playersImageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontalSeparator"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="8dp"
        android:layout_marginTop="11dp"
        android:src="@drawable/ic_people_primarycolor_16dp"
        android:layout_marginBottom="14dp"/>

    <TextView
        android:id="@+id/playersTextView"
        style="@style/textViewSubhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/horizontalSeparator"
        android:layout_toEndOf="@+id/playersImageViewIcon"
        android:layout_marginTop="@dimen/margin_half"
        android:text="@string/players"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/color_primary"
        android:layout_marginBottom="14dp"/>

</RelativeLayout>